feat: setup of javafx gui and reformat directory structure